Upgrade Java from 8 to 21, Spring Boot from 2.7.18 to 3.2.3, and apply Spring Security 6.0 migration